# BugTracker

server/: .env.example  Cargo.toml
server/src/: main.rs  utils.rs
server/src/endpoints/: add_bug.rs  auth.rs  list_all_bugs.rs  mod.rs
server/src/types/: bug.rs
