[package]
name = "server"
version = "0.1.0"
authors = ["Lulonaut <lulonaut@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlite = "0.26.0"
serde = {version = "1.0.126", features= ["derive"]}
serde_json = "1.0.64"
sha2 = "0.9.5"
hex = "0.4.3"